<resources>
    <string name="app_name">DosBoxApplication</string>
    <string name="debug">警告: 启用调试模式</string>
    <string name="info_slider">信息</string>
    <string name="settings_slider">设置</string>
    <string name="menu_keyboard">键盘</string>
    <string name="menu_joystick">遥杆</string>
    <string name="menu_inputmethod">输入法</string>
    <string name="menu_specialkeys">特殊键</string>
    <string name="menu_settings">设置</string>
    <string name="menu_exit">退出</string>
    <string name="input_touchscreen">触屏</string>
    <string name="input_joystick">摇杆</string>
    <string name="input_mouse">鼠标/触控笔</string>
    <string name="input_scroll">滚动屏幕</string>
    <string name="info_dbquickmenu">DosBox 快速菜单</string>
    <string name="info_cycles">循环:</string>
    <string name="info_frameskip">帧跳过:</string>
    <string name="info_inputmode">输入模式:</string>
    <string name="info_tracking">跟踪:</string>
    <string name="info_keyboard">虚拟键盘</string>
    <string name="info_joystick">虚拟摇杆</string>
    <string name="info_scale">屏幕比例</string>
    <string name="info_specialkeys">发送特殊的关键</string>
    <string name="info_settings">设置菜单</string>
    <string name="info_governor">CPU 调解:</string>
    <string name="info_cputype">CPU 信息:</string>
    <string name="info_neon">CPU NEON:</string>
    <string name="info_dosmem">DOS 内存:</string>
    <string name="info_manager">DB 管理器:</string>
    <string name="info_version">版本:</string>
    <string name="info_buttons">虚拟按键</string>
    <string name="info_rendermode">渲染模式:</string>
    <string name="info_dbinfo">系统信息</string>
    <string name="info_mapmouse">鼠标地图:</string>
    <string name="info_mapjoy">Joy 地图:</string>
    <string name="fastforward">快进</string>
    <string name="auto">自动</string>
    <string name="notinstalled">没有安装</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="restart">重新启动以使更改生效</string>
    <string name="manual">手动编辑 /sdcard/dosbox.conf 文件</string>
    <string name="error">发生未知错误</string>
    <string name="cont">继续</string>
    <string name="cycles">DosBox周期: </string>
    <string name="select_dos_key">选择DOS键映射</string>
    <string name="select_controller_key">按硬件键或选择虚拟按钮:</string>
    <string name="select_analog_stick">向各个方向移动模拟棒</string>
    <string name="undefined">未定义的</string>
    <string name="clear">清空</string>
    <string name="keyboard">键盘</string>
    <string name="noeditor">没有安装系统文本编辑器.</string>
    <string name="confirmreset">确认重置为默认?</string>
    <string name="confirmclear">确认清除所有按钮地图?</string>
    <string name="duplicatemap">错误:复制按钮地图。再试一次.</string>
    <string name="nomoremaps">没有更多可用的硬件密钥映射.</string>
    <string name="gplsource">复制源代码到SD卡?</string>
    <string name="dontkeepactivities">错误:不保持激活的活动开发选项!(请参阅常见问题)</string>
    <string name="mt32missing">MT32 ROM丢失，请参阅常见问题的MIDI仿真</string>
    <string name="glidenogpu">GPU渲染与实验滑翔仿真不兼容。</string>
    <string name="pref_advconfig">对DosBox配置</string>
    <string name="pref_dbsettings">DosBox 设置</string>
    <string name="pref_memtitle">内存大小</string>
    <string name="pref_memsum">设置DOS可用的内存量</string>
    <string name="pref_frameskip">设定框架金额</string>
    <string name="pref_cycles">剂量盒循环(设置过高可能导致滞后)</string>
    <string name="pref_machine">DosBox机器仿真设置</string>
    <string name="pref_cpucore">DosBox CPU核心设置</string>
    <string name="pref_cputype">DosBox CPU设置</string>
    <string name="pref_sbtype">选择声霸卡模拟</string>
    <string name="pref_sbrate">选择音频采样率/质量</string>
    <string name="pref_mixerblocksize">音频混频器块大小(较大的值可以减少跳过)</string>
    <string name="pref_mixerprebuffer">音频混频器预缓冲(较大的值可以减少跳过)</string>
    <string name="pref_kblayout">为键盘布局选择区域设置</string>
    <string name="pref_manualconf_file">选择配置文件的名称/位置</string>
    <string name="pref_editconf_file">使用系统文本编辑器进行编辑(如果安装)</string>
    <string name="pref_mousejoymode">使用摇杆控制鼠标指针</string>
    <string-array name="dosmemsize">
        <item>1 MB</item>
        <item>2 MB</item>
        <item>4 MB</item>
        <item>8 MB</item>
        <item>12 MB</item>
        <item>16 MB</item>
        <item>24 MB</item>
        <item>32 MB</item>
        <item>64 MB</item>
        <item>128 MB</item>
        <item>256 MB</item>
    </string-array>
    <string-array name="dosmemsize_values">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>8</item>
        <item>12</item>
        <item>16</item>
        <item>24</item>
        <item>32</item>
        <item>64</item>
        <item>128</item>
        <item>256</item>
    </string-array>
    <string-array name="dosframeskip">
        <item>0</item>
        <item>1</item>
        <item>2 (default)</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="dosframeskip_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="doscycles">
        <item>auto (default)</item>
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
        <item>6000</item>
        <item>7000</item>
        <item>8000</item>
        <item>9000</item>
        <item>10000</item>
        <item>11000</item>
        <item>12000</item>
        <item>13000</item>
        <item>14000</item>
        <item>15000</item>
        <item>16000</item>
        <item>17000</item>
        <item>18000</item>
        <item>19000</item>
        <item>20000</item>
        <item>21000</item>
        <item>22000</item>
        <item>23000</item>
        <item>24000</item>
        <item>25000</item>
        <item>26000</item>
        <item>27000</item>
        <item>28000</item>
        <item>29000</item>
        <item>30000</item>
        <item>31000</item>
        <item>32000</item>
        <item>33000</item>
        <item>34000</item>
        <item>35000</item>
        <item>36000</item>
        <item>37000</item>
        <item>38000</item>
        <item>39000</item>
        <item>40000</item>
        <item>41000</item>
        <item>42000</item>
        <item>43000</item>
        <item>44000</item>
        <item>45000</item>
    </string-array>
    <string-array name="doscycles_values">
        <item>-1</item>
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
        <item>6000</item>
        <item>7000</item>
        <item>8000</item>
        <item>9000</item>
        <item>10000</item>
        <item>11000</item>
        <item>12000</item>
        <item>13000</item>
        <item>14000</item>
        <item>15000</item>
        <item>16000</item>
        <item>17000</item>
        <item>18000</item>
        <item>19000</item>
        <item>20000</item>
        <item>21000</item>
        <item>22000</item>
        <item>23000</item>
        <item>24000</item>
        <item>25000</item>
        <item>26000</item>
        <item>27000</item>
        <item>28000</item>
        <item>29000</item>
        <item>30000</item>
        <item>31000</item>
        <item>32000</item>
        <item>33000</item>
        <item>34000</item>
        <item>35000</item>
        <item>36000</item>
        <item>37000</item>
        <item>38000</item>
        <item>39000</item>
        <item>40000</item>
        <item>41000</item>
        <item>42000</item>
        <item>43000</item>
        <item>44000</item>
        <item>45000</item>
    </string-array>
    <string-array name="dosmachine">
        <item>svga_s3(推荐)</item>
        <item>vgaonly</item>
        <item>ega</item>
        <item>pcjr</item>
        <item>tandy</item>
        <item>cga</item>
        <item>hercules</item>
    </string-array>
    <string-array name="dosmachine_values">
        <item>svga_s3</item>
        <item>vgaonly</item>
        <item>ega</item>
        <item>pcjr</item>
        <item>tandy</item>
        <item>cga</item>
        <item>hercules</item>
    </string-array>
    <string-array name="doscpu">
        <item>动态 (最快)</item>
        <item>自动</item>
        <item>正常</item>
        <item>简单</item>
    </string-array>
    <string-array name="doscpu_values">
        <item>动态</item>
        <item>自动</item>
        <item>正常</item>
        <item>简单</item>
    </string-array>
    <string-array name="doscputype">
        <item>自动 (最快)</item>
        <item>386</item>
        <item>486</item>
        <item>奔腾</item>
        <item>奔腾mmx</item>
    </string-array>
    <string-array name="doscputype_values">
        <item>auto</item>
        <item>386</item>
        <item>486</item>
        <item>pentium</item>
        <item>pentium_mmx</item>
    </string-array>
    <string-array name="dossbtype">
        <item>Disable SB Emulation</item>
        <item>SoundBlaster 2.0 (faster)</item>
        <item>SoundBlaster Pro 1.0</item>
        <item>SoundBlaster Pro 2.0</item>
        <item>SoundBlaster 16 (default)</item>
    </string-array>
    <string-array name="dossbtype_values">
        <item>none</item>
        <item>sb2</item>
        <item>sbpro1</item>
        <item>sbpro2</item>
        <item>sb16</item>
    </string-array>
    <string-array name="dossbrate">
        <item>8000 Hz (faster)</item>
        <item>11025 Hz</item>
        <item>16000 Hz</item>
        <item>22050 Hz (default)</item>
        <item>32000 Hz</item>
        <item>44100 Hz (slower)</item>
    </string-array>
    <string-array name="dossbrate_values">
        <item>8000</item>
        <item>11025</item>
        <item>16000</item>
        <item>22050</item>
        <item>32000</item>
        <item>44100</item>
    </string-array>
    <string-array name="dosmixerblocksize">
        <item>512 (faster)</item>
        <item>1024 (default)</item>
        <item>2048</item>
        <item>3072</item>
        <item>4096</item>
    </string-array>
    <string-array name="dosmixerblocksize_values">
        <item>512</item>
        <item>1024</item>
        <item>2048</item>
        <item>3072</item>
        <item>4096</item>
    </string-array>
    <string-array name="doskblayout">
        <item>Auto (default)</item>
        <item>Belgium</item>
        <item>Brazil</item>
        <item>Canadian-French</item>
        <item>Czech</item>
        <item>Slovak</item>
        <item>Denmark</item>
        <item>Finland</item>
        <item>France</item>
        <item>Germany</item>
        <item>Hungary</item>
        <item>Italy</item>
        <item>Latin America</item>
        <item>Netherlands</item>
        <item>Norway</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Spain</item>
        <item>Sweden</item>
        <item>Swiss(French)</item>
        <item>Swiss(German)</item>
        <item>UK</item>
        <item>USA</item>
        <item>Yugoslavia</item>
    </string-array>
    <string-array name="doskblayout_values">
        <item>auto</item>
        <item>be</item>
        <item>br</item>
        <item>cf</item>
        <item>cz</item>
        <item>sl</item>
        <item>dk</item>
        <item>su</item>
        <item>fr</item>
        <item>gr</item>
        <item>hu</item>
        <item>it</item>
        <item>la</item>
        <item>nl</item>
        <item>no</item>
        <item>pl</item>
        <item>po</item>
        <item>sp</item>
        <item>sv</item>
        <item>sf</item>
        <item>sg</item>
        <item>uk</item>
        <item>us</item>
        <item>yu</item>
    </string-array>
    <string-array name="confscalemode">
        <item>Fast Scale</item>
        <item>HQ Scale (slower)</item>
    </string-array>
</resources>